Header - Add CSS and make Settings Btn adj

--- a/app/styles.scss
+++ b/app/styles.scss
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css?family=Bungee+Shade|Karla');
+
 body {
-  background: lightBlue;
+  background: rgb(29, 53, 63);
   color: white;
-  font-size: 10px;
+  font-family: 'Karla', sans-serif;
 }
