--- a/app/components/Header/header-style.scss
+++ b/app/components/Header/header-style.scss
@@ -1,3 +1,12 @@
+.Header {
+  background-color: rgba(255, 255, 255, 0.3);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 120px;
+}
+
 h1 {
-  color: red;
+  font-family: 'Bungee Shade', cursive;
+  font-size: 25px;
 }
