--- a/app/components/settings/settings-style.scss
+++ b/app/components/settings/settings-style.scss
@@ -1,6 +1,16 @@
 .settings-wrapper {
   background-color: rgba(0,0,0,0.2);
-  height: 150px;
+  height: 100px;
+}
+
+.parental-controls-wrapper {
+  text-align: center;
+}
+
+.parental-title {
+  display: inline-block;
+  padding: 8px 5px 0;
+  vertical-align: top;
 }
 
 button {
@@ -8,11 +18,23 @@ button {
   background-color: rgb(192, 192, 192);
   border: none;
   font-size: 10px;
-  width: 150px;
-  height: 40px;
+  width: 40px;
+  height: 25px;
   border-radius: 5px;
   top: 20px;
   right: 20px;
+  margin: 5px;
+}
+
+.set-name-input {
+  margin: 0 5px;
+  height: 24px;
+  border: none;
+}
+
+.set-name {
+  padding: 10px 0;
+  text-align: center;
 }
 
 /* The switch - the box around the slider */
