--- a/app/components/displayJokes/styles.scss
+++ b/app/components/displayJokes/styles.scss
@@ -7,12 +7,13 @@
   background-color: rgba(0,0,0,0.2);
   width: 30%;
   margin: 10px;
+  position: relative;
 }
 
 .favStar {
   text-align: right;
   bottom: 0px;
-  margin: 1px;
+  margin: 8px;
 }
 
 .favStar-clicked {
