--- a/app/components/generateJokes/generateJokes-styles.scss
+++ b/app/components/generateJokes/generateJokes-styles.scss
@@ -21,6 +21,10 @@
   right: 20px;
 }
 
+.getJokesBtn:disabled {
+  background-color: rgb(192, 192, 192);
+}
+
 .numOfJokes {
   height: 40px;
   border-radius: 5px;
