--- a/app/components/generateJokes/generateJokes-styles.scss
+++ b/app/components/generateJokes/generateJokes-styles.scss
@@ -9,7 +9,7 @@
   justify-content: center;
 }
 
-.getJokesBtn {
+.get-jokes-btn {
   color: black;
   background-color: rgb(192, 192, 192);
   border: none;
